nav top header added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-dashboard><app-dashboard>
-<router-outlet></router-outlet>
+<app-topheader></app-topheader>
+<app-dashboard>
+  <app-dashboard>
+    <router-outlet></router-outlet>
