dummy graph is added to be refacoted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,6 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<app-dashboard></app-dashboard>
+<app-topheader>
+    <router-outlet></router-outlet>
