--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="1" rowHeight="1:1">
+<mat-grid-list cols="1" rowHeight="400px">
   <mat-grid-tile>
     <mat-card class="example-card">
       <mat-card-header>
