--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,12 +1,12 @@
 mat-grid-tile {
-    background: rgb(184, 178, 178);
+    background: transparent;
 }
 
 .example-card {
-    //max-width: 80vw;
+    max-width: 80vw;
 }
 
 .mat-card-header {
     background-size: cover;
-    background: lightblue;
+    background: rgb(242, 247, 248);
 }
