--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -1,3 +1,27 @@
-<div>
-  it works
+<div class="container mb-5">
+  <div class="hero-unit">
+    <h1>NewsFeed, you fresh dose of news of the day!</h1>
+    <p>Simple marketing or informational website.</p>
+  </div>
+
+  <h4>Top Headlines</h4>
+
+  <div class="row">
+    <div *ngFor="let d of topheaderDisplay" class="col-lg-3 mt-3 mb-3">
+
+      <div class="box">
+        <img src="{{d.urlToImage}}" width="100%" height="160px">
+        <time>
+          {{d.publishedAt | date:'mediumDate'}}
+        </time>
+        <h5 class=" mt-3 mb-3">
+          {{d.title}}
+        </h5>
+
+        <a href="{{d.url}}" target="_black" class="btn btn-dark btn-sm mt-2">Read more</a>
+
+      </div>
+    </div>
+  </div>
+
 </div>
