--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,14 @@
+
+.parent {
+    display: block;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
+
 mat-grid-tile {
     background: transparent;
 }
