--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -1,10 +1,10 @@
-<div class="container mb-5">
+<div class="container mt-5">
   <div class="hero-unit">
     <h1>NewsFeed, you fresh dose of news of the day!</h1>
     <p>Simple marketing or informational website.</p>
   </div>
 
-  <h4>Top Headlines</h4>
+  <h4>Top Header</h4>
 
   <div class="row">
     <div *ngFor="let d of topheaderDisplay" class="col-lg-3 mt-3 mb-3">
@@ -23,5 +23,7 @@
       </div>
     </div>
   </div>
+
+  <div style="font-size: 15px;">SECOND PART</div>
 
 </div>
