--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,6 @@
   </div>
 </nav>
 <app-dashboard></app-dashboard>
-<app-topheader>
-    <router-outlet></router-outlet>
+<app-topheader></app-topheader>
+<app-footer>
+<router-outlet></router-outlet>
