--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -55,7 +55,7 @@ https://www.youtube.com/channel/UCQM5ye1xR4vJgtga0ryud2Q/
           <div class="widget no-box">
             <h5 class="widget-title">Contact Us<span></span></h5>
 
-            <p><a href="mailto:info@domain.com" title="glorythemes">info@domain.com</a></p>
+            <p><a href="mailto:info@domain.com" title="glorythemes">cv@neubra.dk</a></p>
             <ul class="social-footer2">
               <li class=""><a title="youtube" target="_blank" href="https://www.youtube.com/"><img alt="youtube"
                     width="30" height="30"
@@ -85,7 +85,7 @@ https://www.youtube.com/channel/UCQM5ye1xR4vJgtga0ryud2Q/
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p>Copyright Company Name © 2016. All rights reserved.</p>
+          <p>&copy; Ed Hansen © 2021. All rights reserved.</p>
         </div>
       </div>
     </div>
