setup nav router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLink="">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="health">Health</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -17,4 +20,4 @@
 <app-dashboard></app-dashboard>
 <app-topheader></app-topheader>
 <app-footer>
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
