--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@ https://www.youtube.com/channel/UCQM5ye1xR4vJgtga0ryud2Q/
 
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="widget subscribe no-box">
-            <h5 class="widget-title">COMPANY NAME<span></span></h5>
+            <h5 class="widget-title">EDS MAIN CORE <span></span></h5>
             <p>About the company, little discription will goes here.. </p>
           </div>
         </div>
