--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -4,7 +4,7 @@
     <p>Simple marketing or informational website.</p>
   </div>
 
-  <h4>Top Header</h4>
+  <h4>Top Headlines</h4>
 
   <div class="row">
     <div *ngFor="let d of topheaderDisplay" class="col-lg-3 mt-3 mb-3">
