--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <mat-grid-tile>
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>NEWSFEED Graph </mat-card-title>
+        <mat-card-title>NEWSFEED Graph DEMO </mat-card-title>
         <mat-card-subtitle>"NEWSFEED Graph " (also called Bar Chart) is a graphical display</mat-card-subtitle>
       </mat-card-header>
       <p-chart type="bar" [data]="userUsageHoursData" [options]="options"></p-chart>
