router and minor style correction

--- a/src/app/topheader/topheader.component.scss
+++ b/src/app/topheader/topheader.component.scss
@@ -2,7 +2,12 @@
   padding: 10px 10px;
 }
 
-.box h5 {
+.box {
+ font-size: 1rem;
+ font-weight: bold;
+}
+
+h5 {
  font-size: 1rem;
  font-weight: bold;
 }
