--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,6 @@
     </div>
   </nav>
 </div>
-<app-dashboard></app-dashboard>
-<app-topheader></app-topheader>
-<app-footer>
-  <router-outlet></router-outlet>
+
+<router-outlet></router-outlet>
+<app-footer></app-footer>
